--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: option-bot
     env: python
+    runtime: python-3.11
     buildCommand: "pip install -r requirements.txt"
     startCommand: "uvicorn app.main:app --host 0.0.0.0 --port 10000"
     plan: free
@@ -26,3 +27,4 @@ services:
 databases:
   - name: option-bot-db
     plan: free
+
