--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: option-bot
     env: docker
     plan: free
-    dockerfilePath: ./Dockerfile
+    autoDeploy: true
     envVars:
       - key: API_KEY
         value: supersecret123
@@ -17,11 +17,3 @@ services:
         sync: false
       - key: KITE_ACCESS_TOKEN
         sync: false
-      - key: DATABASE_URL
-        fromDatabase:
-          name: option-bot-db
-          property: connectionString
-
-databases:
-  - name: option-bot-db
-    plan: free
